Fixed padding around items in menu. Refs #14.
We currently use markdown to turn the menu into HTML, this adds a <p> around
the items. This fix makes sure it is not visible.

--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ li {
   padding: .2em 0;
 }
 
+#menu p {
+  margin:  0;
+  padding: 0;
+}
+
 
 /* The palette used for the website:
 Purple
